force-app/main/default/objects/Apttus_Config2__CostType__c/Apttus_Config2__CostType__c.object-meta.xml
<CustomObject>
    <description>Represents cost hierarchy definition</description>
    <label>Cost Type</label>
    <nameField>
        <label>Cost Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>