force-app/main/default/objects/Apttus_Config2__CostType__c/fields/Apttus_Config2__CostModelId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CostModelId__c</fullName>
    <description>Reference to master cost model</description>
    <label>Cost Model</label>
    <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
    <relationshipLabel>Cost Types</relationshipLabel>
    <relationshipName>CostTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>