force-app/main/default/objects/Apttus_Config2__CostType__c/fields/Apttus_Config2__HideAllChildCosts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideAllChildCosts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether child cost types should be hidden in the price waterfall</description>
    <inlineHelpText>Indicates whether child cost types should be hidden in the price waterfall</inlineHelpText>
    <label>Hide Child Cost Types in Price Waterfall</label>
    <type>Checkbox</type>
</CustomField>