force-app/main/default/objects/Apttus_Config2__CostType__c/fields/Apttus_Config2__IsProductSpecific__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsProductSpecific__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the cost type has relevant cost list item(price list item)</description>
    <label>Is Product Specific</label>
    <type>Checkbox</type>
</CustomField>