force-app/main/default/objects/Apttus_Config2__CostType__c/fields/Apttus_Config2__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Label__c</fullName>
    <description>Cost Type Label</description>
    <label>Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Cost</fullName>
            </value>
            <value>
                <fullName>Production Cost</fullName>
            </value>
            <value>
                <fullName>Material, Equipment and Labor</fullName>
            </value>
            <value>
                <fullName>Material and Equipment</fullName>
            </value>
            <value>
                <fullName>Electrical Material</fullName>
            </value>
            <value>
                <fullName>Mechanical Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>