force-app/main/default/objects/Apttus_Config2__CostType__c/fields/Apttus_Config2__ParentCostTypeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentCostTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to parent cost type</description>
    <label>Parent Cost Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__CostType__c.Apttus_Config2__CostModelId__c</field>
            <operation>equals</operation>
            <valueField>$Source.Apttus_Config2__CostModelId__c</valueField>
        </filterItems>
        <infoMessage>Please choose the parent cost type</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__CostType__c</referenceTo>
    <relationshipLabel>Child Cost Types</relationshipLabel>
    <relationshipName>CostTypes</relationshipName>
    <type>Lookup</type>
</CustomField>